# smartportfolio

./: .gitignore  main.py  portafolio.json  pyproject.toml
src/: interfaces.py  modelos.py  portafolio.py  reportes.py  yahoo_finance_client.py
tests/: conftest.py  test_models.py  test_oraculo.py  test_reportes.py
